[package]
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"
name = "ika"
version = "0.1.0"

[dependencies]
actix = "0.7.7"
actix-web = "0.7.14"
dotenv = "0.13.0"
failure = "0.1.3"
futures = "0.1.25"
log = "0.4.6"
postgres = "0.15.2"
pretty_env_logger = "0.2.5"
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
serde = "1.0.80"
serde_derive = "1.0.80"
structopt = "0.2.13"
